--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,20 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>My New Hugo Site</title>
+<title>Shiva Reddy</title>
 
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://example.org/">
+<link rel="canonical" href="https://shivareddy.dev/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.3613efbd0b1772781e8f49935e973cae632a7f61471c05b17be155505ccf87b5.css" integrity="sha256-NhPvvQsXcngej0mTXpc8rmMqf2FHHAWxe&#43;FVUFzPh7U=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://example.org/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://example.org/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://example.org/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://example.org/apple-touch-icon.png">
-<link rel="mask-icon" href="http://example.org/safari-pinned-tab.svg">
+<link rel="icon" href="https://shivareddy.dev/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://shivareddy.dev/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://shivareddy.dev/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://shivareddy.dev/apple-touch-icon.png">
+<link rel="mask-icon" href="https://shivareddy.dev/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://example.org/index.xml">
+<link rel="alternate" type="application/rss+xml" href="https://shivareddy.dev/index.xml">
 <noscript>
     <style>
         #theme-toggle,
@@ -56,23 +56,34 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="My New Hugo Site" />
+</noscript>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5FGWR2YZ35"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-5FGWR2YZ35', { 'anonymize_ip': false });
+}
+</script>
+<meta property="og:title" content="Shiva Reddy" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="https://shivareddy.dev/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="My New Hugo Site"/>
+<meta name="twitter:title" content="Shiva Reddy"/>
 <meta name="twitter:description" content=""/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "My New Hugo Site",
-  "url": "http://example.org/",
+  "name": "Shiva Reddy",
+  "url": "https://shivareddy.dev/",
   "description": "",
-  "thumbnailUrl": "http://example.org/favicon.ico",
+  "thumbnailUrl": "https://shivareddy.dev/favicon.ico",
   "sameAs": [
       
   ]
@@ -95,7 +106,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://example.org/" accesskey="h" title="My New Hugo Site (Alt + H)">My New Hugo Site</a>
+            <a href="https://shivareddy.dev/" accesskey="h" title="Shiva Reddy (Alt + H)">Shiva Reddy</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -127,7 +138,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="http://example.org/">My New Hugo Site</a></span>
+    <span>&copy; 2023 <a href="https://shivareddy.dev/">Shiva Reddy</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
