--- a/public/404.html
+++ b/public/404.html
@@ -10,12 +10,12 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://shivareddy.dev/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.3613efbd0b1772781e8f49935e973cae632a7f61471c05b17be155505ccf87b5.css" integrity="sha256-NhPvvQsXcngej0mTXpc8rmMqf2FHHAWxe&#43;FVUFzPh7U=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://shivareddy.dev/favicon.ico">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.7140587df96a2b1a49eb723fa7063dc0c641a6cb638f3140e8d3beb4deae4f5c.css" integrity="sha256-cUBYfflqKxpJ63I/pwY9wMZBpstjjzFA6NO&#43;tN6uT1w=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://shivareddy.dev/assets/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://shivareddy.dev/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://shivareddy.dev/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://shivareddy.dev/apple-touch-icon.png">
-<link rel="mask-icon" href="https://shivareddy.dev/safari-pinned-tab.svg">
+<link rel="apple-touch-icon" href="https://shivareddy.dev/assets/favicon.ico">
+<link rel="mask-icon" href="https://shivareddy.dev/assets/favicon.ico">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -116,6 +116,11 @@ if (!doNotTrack) {
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="https://shivareddy.dev/dsa" title="DSA">
+                    <span>DSA</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
